# hack_attacks

./: .gitignore  pyproject.toml
app/: brute_force.py  views.py
core_settings/: asgi.py  settings.py  urls.py  wsgi.py
templates/: xss_form.html
