[tool.poetry]
name = "hack_attacks"
version = "0.1.0"
description = ""
authors = ["Anton Kochnevski <kochnevskiia@rocketdata.io>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
